<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_car"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:scaleType="centerCrop"
            android:src="@drawable/care_image"

            app:layout_constraintBottom_toTopOf="@id/text_view_store_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_prod_name" />

        <ImageView

            android:id="@+id/image_phone"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/phone_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_view_phone"
            app:layout_constraintTop_toBottomOf="@id/text_view_store_name" />

        <ImageView
            android:id="@+id/image_geo"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/geo_icon"
            app:layout_constraintRight_toLeftOf="@+id/text_view_km"
            app:layout_constraintTop_toBottomOf="@id/image_view_car" />

        <ImageView
            android:id="@+id/image_clock"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/clock_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/text_view_hours"
            app:layout_constraintTop_toBottomOf="@id/text_view_km"/>

        <TextView
            android:id="@+id/text_view_prod_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/product_name"
            app:layout_constraintBottom_toTopOf="@+id/image_view_car"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/store_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_car" />

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/_435343544354"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_phone"
            app:layout_constraintTop_toBottomOf="@id/text_view_store_name" />

        <TextView
            android:id="@+id/text_view_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/_2_km_away"
            app:layout_constraintBottom_toTopOf="@id/text_view_hours"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_car" />

        <TextView
            android:id="@+id/text_view_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"

            android:text="@string/_2_hours_left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_km"

            />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>