<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/image_view_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/car_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_in_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_image_view"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/grey_background"
                    app:layout_constraintLeft_toLeftOf="@+id/constraint_in_card_view"
                    app:layout_constraintRight_toLeftOf="@+id/first_row"
                    app:layout_constraintTop_toTopOf="@+id/constraint_in_card_view" />

                <TextView
                    android:id="@+id/first_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/second_row"
                    app:layout_constraintLeft_toRightOf="@+id/circle_image_view"
                    app:layout_constraintTop_toTopOf="@+id/constraint_in_card_view" />

                <TextView
                    android:id="@+id/second_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/title_next"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    app:layout_constraintLeft_toRightOf="@+id/circle_image_view"
                    app:layout_constraintTop_toBottomOf="@+id/first_row" />

                <TextView
                    android:id="@+id/red_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRed"
                    android:paddingBottom="8dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="8dp"
                    android:text="@string/dollar"
                    android:textColor="@color/clolrWhite"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/constraint_in_card_view"
                    app:layout_constraintRight_toRightOf="@+id/constraint_in_card_view"
                    app:layout_constraintTop_toTopOf="@+id/constraint_in_card_view" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_in_card_view_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGrey"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/address_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintLeft_toLeftOf="@+id/constraint_in_card_view_grey"
                    app:layout_constraintTop_toTopOf="@+id/constraint_in_card_view_grey" />

                <TextView
                    android:id="@+id/number_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/number"
                    app:layout_constraintBottom_toBottomOf="@+id/constraint_in_card_view_grey"
                    app:layout_constraintLeft_toRightOf="@id/phone"
                    app:layout_constraintTop_toBottomOf="@+id/address_textView" />

                <TextView
                    android:id="@+id/km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/km"
                    app:layout_constraintRight_toRightOf="@id/constraint_in_card_view_grey"
                    app:layout_constraintTop_toTopOf="@+id/constraint_in_card_view_grey" />

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/hours"
                    app:layout_constraintRight_toRightOf="@+id/constraint_in_card_view_grey"
                    app:layout_constraintTop_toBottomOf="@+id/km" />

                <ImageView
                    android:id="@+id/geo"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/geo_icon"
                    app:layout_constraintRight_toLeftOf="@+id/km"
                    app:layout_constraintTop_toTopOf="@id/constraint_in_card_view_grey" />

                <ImageView
                    android:id="@+id/clock"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/clock_icon"
                    app:layout_constraintRight_toLeftOf="@+id/hours"
                    app:layout_constraintTop_toBottomOf="@+id/km" />

                <ImageView
                    android:id="@+id/phone"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/phone_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/constraint_in_card_view_grey"
                    app:layout_constraintLeft_toLeftOf="@+id/constraint_in_card_view_grey"
                    app:layout_constraintRight_toLeftOf="@+id/number_textView"
                    app:layout_constraintTop_toBottomOf="@+id/address_textView"

                    />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>